<resources>
  <string name="close">Close</string>
  <string name="save">Save</string>
  <string name="update">Update</string>

  <!-- Error -->
  <string name="empty_field_error_message">%1$s is required.</string>
  <string name="general_error_message">Something when wrong.</string>

  <string name="delete">Delete</string>
  <string name="cancel">Cancel</string>

  <!-- Accessibility -->
  <string name="movie_image_placeholder">Movie image</string>
  <string name="top_level_navigation_content_description_selected">Selected bottom navigation item %1$s</string>
  <string name="top_level_navigation_content_description_unselected">Unselected bottom navigation item %1$s</string>
</resources>
